# windows-mini-env

./: Cargo.toml  README.md  build.rs  icon.rc
src/: env_app copy.rs  env_app.rs  env_utils.rs  main.rs  setting_app.rs
