[package]
name = "mini_env"
version = "0.0.2"
edition = "2021"
authors = ["ddki2068@gmail.com"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
native-windows-gui = "1.0.12"
winreg = "0.12.0"

[build-dependencies]
embed-resource = "1.5.1"
